[project]
name = "zo-langgraph"
version = "2.0.0"
description = "ZeroOrigine LangGraph Orchestration Service"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "supabase>=2.10",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "anthropic>=0.39",
]
